--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
     <head>
         <meta charset="utf-8">
@@ -309,38 +309,38 @@
 
 
         <!-- Project Start -->
-        <!-- <div class="container-fluid py-5">
+      <div class="container-fluid py-5">
             <div class="container py-5">
                 <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Nos projets</h5>
-                    <h1 class="display-5">Nos travaux realisés récemment</h1>
+                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Traitement raisonnés</h5>
+                    <h1 class="display-5">Nos certifications</h1>
                 </div>
                 <div class="row g-5">
                     <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-left bg-dark"></div>
                             <div class="project-right bg-dark"></div>
-                            <img src="img/project-1.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Punaise de lit</a>
+                            <img src="img/certy.jpg" class="img-fluid h-100" alt="img">
+                            <a href="" class="fs-4 fw-bold text-center">Agrée certibiocide</a>
                         </div>
                     </div>
                     <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
                         <div class="project-item">
                             <div class="project-left bg-dark"></div>
                             <div class="project-right bg-dark"></div>
-                            <img src="img/project-2.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Frelon asiatique</a>
+                            <img src="img/phyto.jpg" class="img-fluid h-100" alt="img">
+                            <a href="" class="fs-4 fw-bold text-center">Agrée certiphyto</a>
                         </div>
                     </div>
                     <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
                         <div class="project-item">
                             <div class="project-left bg-dark"></div>
                             <div class="project-right bg-dark"></div>
-                            <img src="img/project-3.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Piège à rat</a>
+                            <img src="img/traitement.jpg" class="img-fluid h-100" alt="img">
+                            <a href="" class="fs-4 fw-bold text-center">Traitements raisonnés</a>
                         </div>
-                    </div> -->
-                    <!-- <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+                    </div> 
+                <!-- <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-left bg-dark"></div>
                             <div class="project-right bg-dark"></div>
@@ -363,7 +363,7 @@
                             <img src="img/project-6.jpg" class="img-fluid h-100" alt="img">
                             <a href="" class="fs-4 fw-bold text-center">Furniture Sanitizing</a>
                         </div>
-                    </div> -->
+                    </div>  -->
                 </div>
             </div>
         </div>
@@ -379,7 +379,7 @@
                 </div>
                 <div class="owl-carousel blog-carousel wow fadeInUp" data-wow-delay=".5s">
                     <div class="blog-item">
-                        <img src="img/blog-1.jpg" class="img-fluid w-100 rounded-top" alt="">
+                        <img src="img/nid1.jpg" class="img-fluid w-100 rounded-top" alt="">
                          <div class="rounded-bottom bg-light">
                             <div class="d-flex justify-content-between p-4 pb-2">
                                 <span class="pe-2 text-dark"><i class="fa fa-user me-2"></i>Domessin</span>
@@ -396,7 +396,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="img/blog-3.jpg" class="img-fluid w-100 rounded-top" alt="">
+                        <img src="img/rat.jpg" class="img-fluid w-100 rounded-top" alt="">
                          <div class="rounded-bottom bg-light">
                             <div class="d-flex justify-content-between p-4 pb-2">
                                 <span class="pe-2 text-dark"><i class="fa fa-user me-2"></i>Voiron</span>
@@ -413,7 +413,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="img/blog-2.jpg" class="img-fluid w-100 rounded-top" alt="">
+                        <img src="img/trait.webp" class="img-fluid w-100 rounded-top" alt="">
                          <div class="rounded-bottom bg-light">
                             <div class="d-flex justify-content-between p-4 pb-2">
                                 <span class="pe-2 text-dark"><i class="fa fa-user me-2"></i>Chambery</span>
@@ -430,7 +430,7 @@
                         </div>
                     </div>
                     <div class="blog-item">
-                        <img src="img/blog-1.jpg" class="img-fluid w-100 rounded-top" alt="">
+                        <img src="img/blatte.jpg" class="img-fluid w-100 rounded-top" alt="">
                          <div class="rounded-bottom bg-light">
                             <div class="d-flex justify-content-between p-4 pb-2">
                                 <span class="pe-2 text-dark"><i class="fa fa-user me-2"></i>Beaucroissant</span>
@@ -589,7 +589,7 @@
                     </div>
                     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
                         <div class="rounded team-item">
-                            <img src="img/team-3.jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+                            <img src="img/women.png" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
                             <div class="team-content bg-primary text-dark text-center py-3">
                                 <span class="fs-4 fw-bold">Léa</span>
                                 <p class="text-muted mb-0">Présidente</p>
@@ -604,7 +604,7 @@
                     </div>
                     <div class="col-xxl-3 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".9s">
                         <div class="rounded team-item">
-                            <img src="img/team-4.jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
+                            <img src="img/men.jpg" class="img-fluid w-100 rounded-top border border-bottom-0" alt="">
                             <div class="team-content bg-primary text-dark text-center py-3">
                                 <span class="fs-4 fw-bold">Tommy</span>
                                 <p class="text-muted mb-0">Co-président</p>
