--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <a href="index.html" class="navbar-brand">
                         <h1 class="text-primary mb-0 display-5">Jay<span class="text-white">3D</span></h1>
                     </a>
-                    <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <!-- <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"> -->
                         <span class="fa fa-bars text-dark"></span>
                     </button>
                     <div class="collapse navbar-collapse me-n3" id="navbarCollapse">
